make sure text alignment in userpage #78

--- a/Spring4/Frontend/src/components/userpage/userpage.css
+++ b/Spring4/Frontend/src/components/userpage/userpage.css
@@ -12,13 +12,38 @@
     text-align: center;
 }
 
-.information {
-    position: static;
-    margin: 30%;
-    width: 40%;
-    top: -50%;
-    height: 30%;
+/*.information {*/
+/*    position: static;*/
+/*    margin: 30%;*/
+/*    width: 40%;*/
+/*    top: -50%;*/
+/*    height: 30%;*/
 
+/*}*/
+.information {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: calc(100% - 30%);
+    overflow-y: auto;
+}
+
+.userpage-info {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    text-align: left;
+    margin-left: -8rem; /* Adjust this value to control the left offset */
+}
+
+.info-item {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 109px;
+    color: #000000;
+    margin-bottom: 0.5rem;
 }
 
 
